--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CDMP Fundamentals - Teste Prático</title>
+    <title>Teste de gestão de dados</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Teste Prático CDMP Fundamentals</h1>
+            <h1>Teste de conhecimento em gestão de dados.</h1>
             <div id="progress-container">
                 <p id="progress-text">Questão 1 de 100</p>
                 <progress id="progress-bar" value="0" max="100"></progress>
